dist/terminal/objects/WELLogEvent__e.object
<CustomObject>
    <fields>
        <fullName>CTX__c</fullName>
        <label>Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVL__c</fullName>
        <label>Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSG__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSP__c</fullName>
        <defaultValue>&apos;main&apos;</defaultValue>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRC__c</fullName>
        <label>Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TST__c</fullName>
        <label>Timestamp</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TXN__c</fullName>
        <label>Transaction</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>WELLog Event</label>
</CustomObject>